k8s/notification/notification-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-nodeport
  namespace: notification-service
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - name: ws
      port: 20052
      targetPort: 20052
      nodePort: 30052
  type: NodePort
