k8s/notification/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: go-microservice-notification-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 20051
              name: grpc
            - containerPort: 20052
              name: ws
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 20052
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 20052
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - name: grpc
      port: 20051
      targetPort: 20051
    - name: ws
      port: 20052
      targetPort: 20052
  type: ClusterIP
