k8s/notification/notification-ws-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-ws-service
  namespace: notification-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "20052"
spec:
  selector:
    app: notification-service
  ports:
    - name: ws
      port: 20052
      targetPort: 20052
  type: ClusterIP
